# audio-player

./: .clang-format  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mpdhandler.cpp  mpdhandler.h
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mpdhandler.cpp  mpdhandler.h  mpdutil.h  scalingpixmaplabel.cpp  scalingpixmaplabel.h  songinfo.h  tagart.cpp  tagart.h  util.h
